--- a/views/home.html
+++ b/views/home.html
@@ -3,7 +3,7 @@
 
 <html><head>
 
-<title> Alphabot-Api </title>
+<title> Aero-Api </title>
 
 <meta charset="UTF-8"> 
 
@@ -15,13 +15,13 @@
 
 <meta name="googlebot" content="index,follow">
 
-<meta property="og:title" content="Api-Alphabot"/>  
+<meta property="og:title" content="Api-Aero"/>  
 
 <meta name="description" content="Sedang Berusaha Untuk Memperbaiki Diri"> 
 
-<meta property="og:image" content="https://e.top4top.io/p_2010lz9211.jpg">
+<meta property="og:image" content="https://c.top4top.io/p_2132cck5y0.jpeg">
 
-<link rel="shortcut icon" href="https://e.top4top.io/p_2010lz9211.jpg" />  
+<link rel="shortcut icon" href="https://c.top4top.io/p_2132cck5y0.jpeg" />  
 
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
