--- a/views/index.html
+++ b/views/index.html
@@ -5,11 +5,11 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta property="og:image" content="https://e.top4top.io/p_2010lz9211.jpg" /> 
+  <meta property="og:image" content="https://c.top4top.io/p_2132cck5y0.jpeg" /> 
 
 <meta property="og:title" content="Aero - APIs" /> <meta property="og:description" content="Made By Me Riyan BOTZ "/> 
 
-<link rel="shortcut icon" href="https://e.top4top.io/p_2010lz9211.jpg" type="image/x-icon" />
+<link rel="shortcut icon" href="https://c.top4top.io/p_2132cck5y0.jpeg" type="image/x-icon" />
 
   <title>Aero Rest Api's</title>
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
